modified:   05-ai-strategy-nlp/notebooks/01_data_extraction.ipynb 	modified:   05-ai-strategy-nlp/notebooks/02_nlp_analysis.ipynb 	modified:   05-ai-strategy-nlp/notebooks/03_visualization.ipynb

--- a/05-ai-strategy-nlp/notebooks/02_nlp_analysis.ipynb
+++ b/05-ai-strategy-nlp/notebooks/02_nlp_analysis.ipynb
@@ -1,327 +1,81 @@
 {
  "cells": [
   {
-   "cell_type": "markdown",
-   "id": "b7b0fe49",
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "97202071",
    "metadata": {},
-   "source": [
-    "# 02 NLP Analysis\n",
-    "Build TF-IDF features contrasting Global North vs South AI strategy texts."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 1,
-   "id": "b7e1fb67",
-   "metadata": {
-    "execution": {
-     "iopub.execute_input": "2026-01-02T12:34:44.113422Z",
-     "iopub.status.busy": "2026-01-02T12:34:44.112877Z",
-     "iopub.status.idle": "2026-01-02T12:34:44.992796Z",
-     "shell.execute_reply": "2026-01-02T12:34:44.990383Z"
-    }
-   },
    "outputs": [],
    "source": [
-    "\n",
-    "from pathlib import Path\n",
-    "import pandas as pd\n",
-    "from sklearn.feature_extraction.text import TfidfVectorizer\n",
-    "\n",
-    "DATA_DIR = Path('..') / 'data'\n",
-    "PROCESSED_DIR = DATA_DIR / 'processed'\n",
-    "EXTERNAL_DIR = DATA_DIR / 'external'  # e.g., region mapping CSV\n",
-    "RESULTS_DIR = Path('..') / 'results'\n",
-    "TABLES_DIR = RESULTS_DIR / 'tables'\n",
-    "TABLES_DIR.mkdir(parents=True, exist_ok=True)\n"
+    "from pathlib import Path\\n\n",
+    "import pandas as pd\\n\n",
+    "from sklearn.feature_extraction.text import TfidfVectorizer\\n\n",
+    "\\n\n",
+    "DATA_DIR = Path('..') / 'data'\\n\n",
+    "PROCESSED_DIR = DATA_DIR / 'processed'\\n\n",
+    "EXTERNAL_DIR = DATA_DIR / 'external'  # e.g., region mapping CSV"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
-   "id": "f88a8ebf",
-   "metadata": {
-    "execution": {
-     "iopub.execute_input": "2026-01-02T12:34:44.996999Z",
-     "iopub.status.busy": "2026-01-02T12:34:44.996503Z",
-     "iopub.status.idle": "2026-01-02T12:34:45.013441Z",
-     "shell.execute_reply": "2026-01-02T12:34:45.012024Z"
-    }
-   },
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>filename</th>\n",
-       "      <th>region</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>US_National_AI_Strategy_clean.txt</td>\n",
-       "      <td>north</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>Canada_AI_Strategy_clean.txt</td>\n",
-       "      <td>north</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>UK_AI_Strategy_clean.txt</td>\n",
-       "      <td>north</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>Germany_AI_Strategy_clean.txt</td>\n",
-       "      <td>north</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>France_AI_Strategy_clean.txt</td>\n",
-       "      <td>north</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "                            filename region\n",
-       "0  US_National_AI_Strategy_clean.txt  north\n",
-       "1       Canada_AI_Strategy_clean.txt  north\n",
-       "2           UK_AI_Strategy_clean.txt  north\n",
-       "3      Germany_AI_Strategy_clean.txt  north\n",
-       "4       France_AI_Strategy_clean.txt  north"
-      ]
-     },
-     "execution_count": 2,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "\n",
-    "# Expect a CSV mapping filename -> region (north/south)\n",
-    "mapping_path = EXTERNAL_DIR / 'region_mapping.csv'\n",
-    "region_df = pd.read_csv(mapping_path)\n",
-    "region_df.head()\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 3,
-   "id": "6dc79367",
-   "metadata": {
-    "execution": {
-     "iopub.execute_input": "2026-01-02T12:34:45.016341Z",
-     "iopub.status.busy": "2026-01-02T12:34:45.016075Z",
-     "iopub.status.idle": "2026-01-02T12:34:45.028695Z",
-     "shell.execute_reply": "2026-01-02T12:34:45.027222Z"
-    }
-   },
+   "execution_count": null,
+   "id": "4d9a2169",
+   "metadata": {},
    "outputs": [],
    "source": [
-    "\n",
-    "texts = []\n",
-    "labels = []\n",
-    "for _, row in region_df.iterrows():\n",
-    "    txt_path = PROCESSED_DIR / row['filename']\n",
-    "    text = txt_path.read_text(encoding='utf-8')\n",
-    "    texts.append(text)\n",
-    "    labels.append(row['region'])\n",
-    "\n",
-    "vectorizer = TfidfVectorizer(max_features=5000)\n",
-    "tfidf = vectorizer.fit_transform(texts)\n",
-    "feature_names = vectorizer.get_feature_names_out()\n"
+    "# Expect a CSV mapping filename -> region (north/south)\\n\n",
+    "mapping_path = EXTERNAL_DIR / 'region_mapping.csv'\\n\n",
+    "region_df = pd.read_csv(mapping_path)\\n\n",
+    "region_df.head()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
-   "id": "682b36b0",
-   "metadata": {
-    "execution": {
-     "iopub.execute_input": "2026-01-02T12:34:45.031506Z",
-     "iopub.status.busy": "2026-01-02T12:34:45.031235Z",
-     "iopub.status.idle": "2026-01-02T12:34:45.043895Z",
-     "shell.execute_reply": "2026-01-02T12:34:45.042576Z"
-    }
-   },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "([('safety', 0.2511028407070178),\n",
-       "  ('ai', 0.24079388086297474),\n",
-       "  ('ethics', 0.23702518386605476),\n",
-       "  ('research', 0.2185701690801001),\n",
-       "  ('governance', 0.1528960567674389),\n",
-       "  ('innovation', 0.15159620118381043),\n",
-       "  ('regulation', 0.1454963778869034),\n",
-       "  ('transparency', 0.13044756079382497),\n",
-       "  ('trust', 0.09670013705875179),\n",
-       "  ('standards', 0.09324650634282476),\n",
-       "  ('infrastructure', 0.07559901568365605),\n",
-       "  ('data', 0.06883467018185216),\n",
-       "  ('publicsector', 0.05869614640419468),\n",
-       "  ('export', 0.05346343789326499),\n",
-       "  ('semiconductor', 0.05346343789326499),\n",
-       "  ('equality', 0.05245686212261631),\n",
-       "  ('europe', 0.05176780486914238),\n",
-       "  ('sovereignty', 0.05176780486914238),\n",
-       "  ('sustainability', 0.051594811125061396),\n",
-       "  ('industry4', 0.050452709488899454)],\n",
-       " [('access', 0.3090875251929278),\n",
-       "  ('development', 0.3090875251929278),\n",
-       "  ('inclusion', 0.29275466505905673),\n",
-       "  ('infrastructure', 0.2046632847248172),\n",
-       "  ('data', 0.19894190485763458),\n",
-       "  ('innovation', 0.19686785399569737),\n",
-       "  ('governance', 0.1645730422815772),\n",
-       "  ('skills', 0.1568003508353833),\n",
-       "  ('agriculture', 0.09980106524523219),\n",
-       "  ('education', 0.09829512468949389),\n",
-       "  ('broadband', 0.09577296601664786),\n",
-       "  ('industry', 0.0944678207954727),\n",
-       "  ('skilling', 0.062028303196013726),\n",
-       "  ('capacity', 0.059640368911830756),\n",
-       "  ('sustainability', 0.054946955834912964),\n",
-       "  ('digital', 0.052950479206741),\n",
-       "  ('economy', 0.052950479206741),\n",
-       "  ('investment', 0.049314464186619444),\n",
-       "  ('equity', 0.04815573893106253),\n",
-       "  ('ethics', 0.038854083903860415)])"
-      ]
-     },
-     "execution_count": 4,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "execution_count": null,
+   "id": "bca89708",
+   "metadata": {},
+   "outputs": [],
    "source": [
-    "\n",
-    "# Quick per-region mean scores for inspection\n",
-    "import numpy as np\n",
-    "\n",
-    "north_mask = [lab.lower() == 'north' for lab in labels]\n",
-    "south_mask = [lab.lower() == 'south' for lab in labels]\n",
-    "north_mean = np.asarray(tfidf[north_mask].mean(axis=0)).ravel() if any(north_mask) else []\n",
-    "south_mean = np.asarray(tfidf[south_mask].mean(axis=0)).ravel() if any(south_mask) else []\n",
-    "\n",
-    "north_top = sorted(zip(feature_names, north_mean), key=lambda x: x[1], reverse=True)[:20]\n",
-    "south_top = sorted(zip(feature_names, south_mean), key=lambda x: x[1], reverse=True)[:20]\n",
-    "north_top, south_top\n"
+    "texts = []\\n\n",
+    "labels = []\\n\n",
+    "for _, row in region_df.iterrows():\\n\n",
+    "    txt_path = PROCESSED_DIR / row['filename']\\n\n",
+    "    text = txt_path.read_text(encoding='utf-8')\\n\n",
+    "    texts.append(text)\\n\n",
+    "    labels.append(row['region'])\\n\n",
+    "\\n\n",
+    "vectorizer = TfidfVectorizer(max_features=5000)\\n\n",
+    "tfidf = vectorizer.fit_transform(texts)\\n\n",
+    "feature_names = vectorizer.get_feature_names_out()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
-   "id": "459b7467",
-   "metadata": {
-    "execution": {
-     "iopub.execute_input": "2026-01-02T12:34:45.046895Z",
-     "iopub.status.busy": "2026-01-02T12:34:45.046596Z",
-     "iopub.status.idle": "2026-01-02T12:34:45.064430Z",
-     "shell.execute_reply": "2026-01-02T12:34:45.063353Z"
-    }
-   },
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>term</th>\n",
-       "      <th>tfidf</th>\n",
-       "      <th>region</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>safety</td>\n",
-       "      <td>0.251103</td>\n",
-       "      <td>north</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>ai</td>\n",
-       "      <td>0.240794</td>\n",
-       "      <td>north</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>ethics</td>\n",
-       "      <td>0.237025</td>\n",
-       "      <td>north</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>research</td>\n",
-       "      <td>0.218570</td>\n",
-       "      <td>north</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>governance</td>\n",
-       "      <td>0.152896</td>\n",
-       "      <td>north</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "         term     tfidf region\n",
-       "0      safety  0.251103  north\n",
-       "1          ai  0.240794  north\n",
-       "2      ethics  0.237025  north\n",
-       "3    research  0.218570  north\n",
-       "4  governance  0.152896  north"
-      ]
-     },
-     "execution_count": 5,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "execution_count": null,
+   "id": "a75e56b5",
+   "metadata": {},
+   "outputs": [],
    "source": [
-    "\n",
+    "# Quick per-region mean scores for inspection\\n\n",
+    "import numpy as np\\n\n",
+    "\\n\n",
+    "north_mask = [lab.lower() == 'north' for lab in labels]\\n\n",
+    "south_mask = [lab.lower() == 'south' for lab in labels]\\n\n",
+    "north_mean = np.asarray(tfidf[north_mask].mean(axis=0)).ravel() if any(north_mask) else []\\n\n",
+    "south_mean = np.asarray(tfidf[south_mask].mean(axis=0)).ravel() if any(south_mask) else []\\n\n",
+    "\\n\n",
+    "north_top = sorted(zip(feature_names, north_mean), key=lambda x: x[1], reverse=True)[:20]\\n\n",
+    "south_top = sorted(zip(feature_names, south_mean), key=lambda x: x[1], reverse=True)[:20]\\n\n",
+    "north_top, south_top"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "f7419630",
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "import pandas as pd\n",
     "\n",
     "def top_to_df(pairs, region_label):\n",
@@ -335,27 +89,13 @@
     "south_df.to_csv(TABLES_DIR / 'south_top_terms.csv', index=False)\n",
     "combined.to_csv(TABLES_DIR / 'top_terms_combined.csv', index=False)\n",
     "\n",
-    "combined.head()\n"
+    "combined.head()"
    ]
   }
  ],
  "metadata": {
-  "kernelspec": {
-   "display_name": "Python 3",
-   "language": "python",
-   "name": "python3"
-  },
   "language_info": {
-   "codemirror_mode": {
-    "name": "ipython",
-    "version": 3
-   },
-   "file_extension": ".py",
-   "mimetype": "text/x-python",
-   "name": "python",
-   "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython3",
-   "version": "3.12.3"
+   "name": "python"
   }
  },
  "nbformat": 4,
