--- a/05-ai-strategy-nlp/notebooks/01_data_extraction.ipynb
+++ b/05-ai-strategy-nlp/notebooks/01_data_extraction.ipynb
@@ -1,108 +1,50 @@
 {
  "cells": [
   {
-   "cell_type": "markdown",
-   "id": "5353db3a",
-   "metadata": {},
-   "source": [
-    "# 01 Data Extraction\n",
-    "Convert PDFs to cleaned text ready for NLP. Keep raw files immutable; write outputs to data/processed."
-   ]
-  },
-  {
    "cell_type": "code",
-   "execution_count": 1,
-   "id": "923ecb10",
-   "metadata": {
-    "execution": {
-     "iopub.execute_input": "2026-01-02T12:26:16.714718Z",
-     "iopub.status.busy": "2026-01-02T12:26:16.714323Z",
-     "iopub.status.idle": "2026-01-02T12:26:17.614542Z",
-     "shell.execute_reply": "2026-01-02T12:26:17.613630Z"
-    }
-   },
+   "execution_count": null,
+   "id": "48f9156b",
+   "metadata": {},
    "outputs": [],
    "source": [
-    "\n",
-    "from pathlib import Path\n",
-    "import sys\n",
-    "sys.path.append(str((Path('..')).resolve()))\n",
-    "from src import text_processing as tp\n",
-    "\n",
-    "DATA_DIR = Path('..') / 'data'\n",
-    "RAW_DIR = DATA_DIR / 'raw'\n",
-    "PROCESSED_DIR = DATA_DIR / 'processed'\n",
-    "MODEL = 'en_core_web_sm'  # adjust if you downloaded a different spaCy model\n"
+    "from pathlib import Path\\n\n",
+    "from src import text_processing as tp\\n\n",
+    "\\n\n",
+    "DATA_DIR = Path('..') / 'data'\\n\n",
+    "RAW_DIR = DATA_DIR / 'raw'\\n\n",
+    "PROCESSED_DIR = DATA_DIR / 'processed'\\n\n",
+    "MODEL = 'en_core_web_sm'  # adjust if you downloaded a different spaCy model"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
-   "id": "d7185204",
-   "metadata": {
-    "execution": {
-     "iopub.execute_input": "2026-01-02T12:26:17.622198Z",
-     "iopub.status.busy": "2026-01-02T12:26:17.621731Z",
-     "iopub.status.idle": "2026-01-02T12:26:17.630940Z",
-     "shell.execute_reply": "2026-01-02T12:26:17.629678Z"
-    }
-   },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "[]"
-      ]
-     },
-     "execution_count": 2,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "execution_count": null,
+   "id": "1ebeda3a",
+   "metadata": {},
+   "outputs": [],
    "source": [
-    "pdfs = list(RAW_DIR.glob('*.pdf'))\n",
+    "pdfs = list(RAW_DIR.glob('*.pdf'))\\n\n",
     "pdfs"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
-   "id": "25ab0524",
-   "metadata": {
-    "execution": {
-     "iopub.execute_input": "2026-01-02T12:26:17.634489Z",
-     "iopub.status.busy": "2026-01-02T12:26:17.634085Z",
-     "iopub.status.idle": "2026-01-02T12:26:17.638273Z",
-     "shell.execute_reply": "2026-01-02T12:26:17.637225Z"
-    }
-   },
+   "execution_count": null,
+   "id": "b15d0208",
+   "metadata": {},
    "outputs": [],
    "source": [
-    "\n",
-    "for pdf in pdfs:\n",
-    "    out_txt = PROCESSED_DIR / f\"{pdf.stem}_clean.txt\"\n",
-    "    tp.pipeline_clean_and_save(pdf_path=pdf, out_path=out_txt, model=MODEL)\n",
-    "    print(f'Saved {out_txt}')\n"
+    "for pdf in pdfs:\\n\n",
+    "    out_txt = PROCESSED_DIR / f\n",
+    "\\n\n",
+    "    tp.pipeline_clean_and_save(pdf_path=pdf, out_path=out_txt, model=MODEL)\\n\n",
+    "    print(f'Saved {out_txt}')"
    ]
   }
  ],
  "metadata": {
-  "kernelspec": {
-   "display_name": "Python 3",
-   "language": "python",
-   "name": "python3"
-  },
   "language_info": {
-   "codemirror_mode": {
-    "name": "ipython",
-    "version": 3
-   },
-   "file_extension": ".py",
-   "mimetype": "text/x-python",
-   "name": "python",
-   "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython3",
-   "version": "3.12.3"
+   "name": "python"
   }
  },
  "nbformat": 4,
